# Boxu

./: .gitignore  CMakeLists.txt  TODO.md
Boxu/: DEV_ISSUES_LOG.txt
Boxu/game/shaders/: sprite.frag  vision_mask.frag
Boxu/game/sounds/: README.txt
Boxu/game/textures/: README.txt
Boxu/lib/glew-2.1.0/include/GL/: glew.h
Boxu/source/: CMakeLists.txt  game.cpp  game.h  level_layout.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h  texturemanager.cpp
docs/: GITHUB_LOG_INSTRUCTIONS.md  GIT_BEGINNER.md  STEP_LOG.md  SUBMISSION_DOCS_OVERVIEW.md  WINDOWS_BUILD.md
game/shaders/: sprite.frag  sprite.vert
scripts/: export-github-log.sh
source/: game.cpp  game.h  logmanager.cpp  logmanager.h  main.cpp  renderer.cpp  renderer.h
studio5_smoketest/: README.md  main.cpp
